[gd_scene load_steps=12 format=3 uid="uid://svdqnhmua150"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_lgfqu"]
[ext_resource type="SpriteFrames" uid="uid://b4l4u8hv0e76u" path="res://tress/sf_virtual_guy.tres" id="2_3nlxv"]
[ext_resource type="SpriteFrames" uid="uid://b3un7wvxfwqk4" path="res://tress/sf_mask_dude.tres" id="3_ohsga"]
[ext_resource type="SpriteFrames" uid="uid://cymrkuak3piea" path="res://tress/sf_pink_man.tres" id="4_s575n"]
[ext_resource type="SpriteFrames" uid="uid://olstouu8ajg" path="res://tress/sf_ninja_frog.tres" id="5_wt5lp"]
[ext_resource type="Texture2D" uid="uid://t0spyes74828" path="res://assets/textures/icons/github_corner.svg" id="6_rvwkx"]
[ext_resource type="Texture2D" uid="uid://bvevpwfw2opvv" path="res://assets/textures/icons/github_corner_white.svg" id="7_e6l70"]
[ext_resource type="AudioStream" uid="uid://btafleilp2jc5" path="res://assets/musics/dongcidaci.wav" id="8_mo8hj"]

[sub_resource type="LabelSettings" id="LabelSettings_25jgu"]
font_size = 80
shadow_size = 20
shadow_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fsbkh"]

[sub_resource type="BitMap" id="BitMap_od42s"]

[node name="MainMenu" type="CanvasLayer" groups=["main_menu"]]
script = ExtResource("1_lgfqu")

[node name="VirtualGuy" type="AnimatedSprite2D" parent="."]
position = Vector2(290, 260)
rotation = -3.14159
scale = Vector2(5, -5)
sprite_frames = ExtResource("2_3nlxv")
animation = &"Idle"

[node name="MaskDude" type="AnimatedSprite2D" parent="."]
position = Vector2(290, 480)
rotation = -3.14159
scale = Vector2(5, -5)
sprite_frames = ExtResource("3_ohsga")
animation = &"Idle"

[node name="PinkMan" type="AnimatedSprite2D" parent="."]
position = Vector2(860, 480)
scale = Vector2(5, 5)
sprite_frames = ExtResource("4_s575n")
animation = &"Idle"

[node name="NinjaFrog" type="AnimatedSprite2D" parent="."]
position = Vector2(860, 260)
scale = Vector2(5, 5)
sprite_frames = ExtResource("5_wt5lp")
animation = &"Idle"

[node name="TextBox" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.5
offset_right = 180.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="TextBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Demo
Survivors"
label_settings = SubResource("LabelSettings_25jgu")
horizontal_alignment = 1

[node name="MenuItems" type="VBoxContainer" parent="TextBox"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="TextBox/MenuItems"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fsbkh")
text = "NewGame"

[node name="SettingButton" type="Button" parent="TextBox/MenuItems"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fsbkh")
text = "Setting"

[node name="CollectionButton" type="Button" parent="TextBox/MenuItems"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fsbkh")
text = "Collection"

[node name="CreditsButton" type="Button" parent="TextBox/MenuItems"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fsbkh")
text = "Credits"

[node name="QuitButton" type="Button" parent="TextBox/MenuItems"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_fsbkh")
text = "Quit
"

[node name="GithubButton" type="TextureButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_right = -80.0
offset_bottom = 80.0
grow_horizontal = 0
scale = Vector2(2, 2)
texture_normal = ExtResource("6_rvwkx")
texture_pressed = ExtResource("6_rvwkx")
texture_hover = ExtResource("7_e6l70")
texture_click_mask = SubResource("BitMap_od42s")

[node name="MusicPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["music"]]
stream = ExtResource("8_mo8hj")

[node name="SoundPlayer2D" type="AudioStreamPlayer2D" parent="." groups=["sound"]]

[connection signal="button_down" from="TextBox/MenuItems/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="mouse_entered" from="TextBox/MenuItems/StartButton" to="." method="_play_button_hover_sound"]
[connection signal="button_down" from="TextBox/MenuItems/SettingButton" to="." method="_on_setting_button_button_down"]
[connection signal="mouse_entered" from="TextBox/MenuItems/SettingButton" to="." method="_play_button_hover_sound"]
[connection signal="button_down" from="TextBox/MenuItems/CollectionButton" to="." method="_on_collection_button_button_down"]
[connection signal="mouse_entered" from="TextBox/MenuItems/CollectionButton" to="." method="_play_button_hover_sound"]
[connection signal="button_down" from="TextBox/MenuItems/CreditsButton" to="." method="_on_credits_button_button_down"]
[connection signal="mouse_entered" from="TextBox/MenuItems/CreditsButton" to="." method="_play_button_hover_sound"]
[connection signal="button_down" from="TextBox/MenuItems/QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="mouse_entered" from="TextBox/MenuItems/QuitButton" to="." method="_play_button_hover_sound"]
[connection signal="button_down" from="GithubButton" to="." method="_on_github_button_button_down"]
[connection signal="mouse_entered" from="GithubButton" to="." method="_play_button_hover_sound"]
